chore(ci): fix docker image publishing
Signed-off-by: Chris Gianelloni <wolf31o2@blinklabs.io>

--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           images: |
             ${{ env.IMAGE_NAME }}
-            ghcr.io/${{ env.IMAGE_NAME }}
+            ghcr.io/${{ github.repository }}
           tags: |
             # Only version, no revision
             type=match,pattern=v(.*)-(.*),group=1
