--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -29,9 +29,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50.1 # current version at time of commit
-          # Optional: golangci-lint command line arguments.
-          # args: --issues-exit-code=0
+          version: v1.53.3 # current version at time of commit
+          args: --timeout 10m
           only-new-issues: true
       - name: go-test
         run: go test ./...
