--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [create-draft-release]
     permissions:
+      actions: write
+      attestations: write
+      checks: write
+      contents: write
       id-token: write
+      packages: write
+      statuses: write
     steps:
       - run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
       - uses: actions/checkout@v4
@@ -79,7 +85,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [create-draft-release]
     permissions:
+      actions: write
+      attestations: write
+      checks: write
+      contents: write
       id-token: write
+      packages: write
+      statuses: write
     steps:
       - run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
       - uses: actions/checkout@v4
