--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -9,6 +9,9 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: blinklabs/cardano-node-api
 
+permissions:
+  content: read
+
 jobs:
   docker:
     runs-on: ubuntu-latest
